log
Thu Apr 30 07:59:31 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = map->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: ‘map’ undeclared (first use in this function)
  105 |     treeNode*aux = map->root;
      |                    ^~~
treemap.c:105:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:107:15: error: request for member ‘left’ in something not a structure or union
  107 |         if(aux->left != NULL){
      |               ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:12: error: returning ‘int *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  111 |     return aux;
      |            ^~~
22b5e0e
Thu Apr 30 08:00:27 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = map->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: ‘map’ undeclared (first use in this function)
  105 |     treeNode*aux = map->root;
      |                    ^~~
treemap.c:105:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:107:15: error: request for member ‘right’ in something not a structure or union
  107 |         if(aux->right == NULL){
      |               ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:12: error: returning ‘int *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  111 |     return aux;
      |            ^~~
270f875
Thu Apr 30 08:01:52 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = map->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: ‘map’ undeclared (first use in this function)
  105 |     treeNode*aux = map->root;
      |                    ^~~
treemap.c:105:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:107:15: error: request for member ‘left’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |               ^~
treemap.c:107:36: error: request for member ‘right’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |                                    ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:12: error: returning ‘int *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  111 |     return aux;
      |            ^~~
3f186f7
Thu Apr 30 08:02:28 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = tree->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
  105 |     treeNode*aux = tree->root;
      |                    ^~~~
treemap.c:107:15: error: request for member ‘left’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |               ^~
treemap.c:107:36: error: request for member ‘right’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |                                    ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:12: error: returning ‘int *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  111 |     return aux;
      |            ^~~
5479636
Thu Apr 30 08:03:11 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = tree->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
  105 |     treeNode*aux = tree->root;
      |                    ^~~~
treemap.c:107:15: error: request for member ‘left’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |               ^~
treemap.c:107:36: error: request for member ‘right’ in something not a structure or union
  107 |         if(aux->left != NULL && aux->right == NULL){
      |                                    ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:15: error: request for member ‘pair’ in something not a structure or union
  111 |     return aux->pair;
      |               ^~
treemap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
994f466
Thu Apr 30 08:07:45 PM UTC 2026: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|7
total_score: 5/60
f4ec712
